third_party/move/move-compiler-v2/tests/checking/inlining/break_continue_in_lambda.exp

Diagnostics:
warning: Unnecessary trailing semicolon
  ┌─ tests/checking/inlining/break_continue_in_lambda.move:3:14
  │
3 │         break;
  │         -----^
  │         │    │
  │         │    A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon.
  │         Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:12:18
   │
12 │             break;
   │             -----^
   │             │    │
   │             │    A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon.
   │             Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:18:21
   │
18 │             continue;
   │             --------^
   │             │       │
   │             │       A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon.
   │             Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:50:7
   │
50 │     break;
   │     -----^
   │     │    │
   │     │    A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon.
   │     Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:54:10
   │
54 │     continue;
   │     --------^
   │     │       │
   │     │       A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon.
   │     Any code after this expression will not be reached


Diagnostics:
error: Break outside of a loop not currently supported in inline functions
  ┌─ tests/checking/inlining/break_continue_in_lambda.move:3:9
  │
3 │         break;
  │         ^^^^^

error: Break outside of a loop not supported in function-typed arguments (lambda expressions)
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:40:26
   │
40 │                 brk2(| | break);
   │                          ^^^^^

error: Continue outside of a loop not supported in function-typed arguments (lambda expressions)
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:41:26
   │
41 │                 brk2(| | continue);
   │                          ^^^^^^^^
